# apalis-mysql

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  issues.yml  release.yml  security.yml
.sqlx/: query-056f7df9050133ce3daf6ed787349128a1eda75be61be01b87a3f3fc2680396f.json  query-19f0e0d51f9d556ce19268c4d1f7b655b4828da876bf5adf0ca2f71ffc1cb908.json  query-205a5817613b0dc6a7875c8123e92fc61333de2c8d95cf608a9d217a981123e0.json  query-2138dce6bfe0b601b7a6091589bcccef254ea35675d55e9a8e37ff1b9ae23f57.json  query-2d5d161c55c1e89b2a87bf4ec76dc04139da50c6f05278d6a8838e80026ec161.json  query-35064f3903bdfcf7651bd79eadd33a92f2f059df7e2f0d0193536b2bb8216282.json  query-364ea9d46d82005df985eb97fdbef615da53f9b097e569474344e764083ead64.json  query-3adb3904bac09a612d5c3e83e5af89240eb36fb5577f7f5d149ab978a557a98e.json  query-3bb5cd05cbbf2683e7e8cbf1e7d41c3b590693cac3fd619e69765cf25709ed70.json  query-539de007e5cb04f824eecfb37644ec3c932074924ef28532ed4bcb9c21cec6b0.json  query-63ca5512c30a380606073e6173726bb75c47d724b73ad4e5259ef56968835650.json  query-7f2a235f0f0decdfb4262650347f656af640f1c2f05ae3e364a5ff31a7e5e403.json  query-80546dfd433ebfe58f79903be7e75586c08bfbd7089219ff4a16f2760c0e15a6.json  query-80c9fc6c2af68bc15d7c1afbb19f86afbde77d768513f0246770dbb070a31b9b.json  query-84eb35cf8e57fadcb1a2384f86f91c8af370b4651211ce30a4476478ed945948.json  query-9139571d58e99737feb2a5e2674e4c50736e50ebac765e46127ff4cdc5b8ef46.json  query-9d2beef0c47878b3334e35e0ab30e2266781259d7b37112a5518152f2d781f17.json  query-abcf577fdaf6068b8d975a5e04b2aecd5363f4d6a747ae4d066878cfb3851937.json  query-ad09e64e33f2fec79c5461faca6e2956772ae1ff3d7eae5d85bbae59baf481b6.json  query-bc32dfdda522909824de3dd16a957bf9ad47b8816a3ae531793e44821645b19b.json  query-c049cf1078a393b011f7ed808472dcc3c3dbda40cb27ff74bd5ab8f263980c73.json  query-c1ac1808c982a608649ac632be3ae04e0d6e08a2ca36cbb4ff089389eccd3d50.json  query-c4bf95cdd16e6822bd6c9c4fe5572678cec654b0d12b950c9858648753e00162.json  query-cc1a32f1a8accc7554e7af8e9956a61863566c7b7160da4916e1e50466052723.json  query-cc96cbeae966723d957c58094937ae5d14660a312028f0673a5862330dfaa87d.json  query-d15f886e216279ccb27da940ecdb3c47e5b005343d57b03cf1f9100125cc02f1.json  query-db9632eaaeb24646af951a1fe98b17d65a4f4a332990876d2a08bbc19ae07333.json  query-ed63771539fd49460448a93c8806e283d8565427620c015a06e385422da59878.json  query-edbf4ac738186c1c68854c7c0999d0a58bca4014e682a0dc39489f26dba568a0.json  query-f4414dfa8ea0b093c2d7bba6f72a24f7399fd562b4b766dfaf45710318ba1f54.json
examples/: basic.rs  dag.rs  shared.rs  unique_jobs.rs  workflow.rs
migrations/: 20251205114343_rename_last_error_to_last_result.sql  20251206101650_use_bytes_over_json.sql  20251206103218_add_metadata_column.sql  20251206111350_add_worker_started_at.sql  20251206165752_idx_jobs_fetch.sql  20251226113523_use_timestamp_for_utc.sql  20260508124246_idempotency_key.sql
src/: ack.rs  config.rs  fetcher.rs  from_row.rs  lib.rs  shared.rs  sink.rs  timestamp.rs
supply-chain/: config.toml
(+34 files in other folders)
