[package]
name = "apalis-mysql"
version = "1.0.0-rc.1"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition = "2024"
repository = "https://github.com/apalis-dev/apalis-mysql"
license-file = "LICENSE"
description = "Background task processing for rust using apalis and mysql"
readme = "README.md"
homepage = "https://github.com/apalis-dev/apalis-mysql"
documentation = "https://docs.rs/apalis-mysql"
keywords = ["apalis", "mysql", "jobs", "queue", "worker"]
categories = ["asynchronous", "database", "network-programming"]
publish = true

[features]
default = ["migrate", "tokio-comp", "chrono"]
migrate = ["sqlx/migrate", "sqlx/macros"]
async-std-comp = ["async-std", "sqlx/runtime-async-std-rustls"]
async-std-comp-native-tls = ["async-std", "sqlx/runtime-async-std-native-tls"]
tokio-comp = ["tokio", "sqlx/runtime-tokio-rustls"]
tokio-comp-native-tls = ["tokio", "sqlx/runtime-tokio-native-tls"]
chrono = ["dep:chrono", "sqlx/chrono"]
time = ["dep:time", "sqlx/time"]

[dependencies]
apalis-codec = "0.1.0-rc.1"
# For development: use local path to apalis with SqlTimestamp trait
# For release: switch to version or git reference once apalis-sql is updated
apalis-core = { path = "../apalis/apalis-core", default-features = false, features = ["sleep"] }
apalis-sql = { path = "../apalis/apalis-sql", default-features = false }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"], optional = true }
time = { version = "0.3", features = ["serde"], optional = true }
pin-project = "1.1.10"
serde_json = "1"
futures = "0.3.30"
thiserror = "2"
tokio = { version = "1", features = ["rt", "net"], optional = true }
async-std = { version = "1.13.0", optional = true }
ulid = { version = "1", features = ["serde"] }
log = "0.4"


[dependencies.sqlx]
version = "0.8.1"
default-features = false
# Note: chrono/time features are controlled by our feature flags
features = ["mysql", "json"]


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
apalis = { version = "1.0.0-rc.1" }
apalis-workflow = { version = "0.1.0-rc.1" }
futures-util = "0.3.31"
env_logger = "0.11"

[package.metadata.docs.rs]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[lints.clippy]
type_complexity = "allow"
manual_let_else = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
must_use_candidate = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
option_option = "warn"
redundant_clone = "warn"

[package.metadata.cargo-udeps.ignore]
# When both chrono and time features are enabled, time takes precedence
# so chrono appears unused. This is expected behavior for --all-features.
normal = ["chrono"]
